fixed menu contrasts

--- a/assets/sass/noesya-hugo/_style.sass
+++ b/assets/sass/noesya-hugo/_style.sass
@@ -130,7 +130,7 @@ header#document-header
                     @include media-breakpoint-up(md)
                         @include h1
                 &:hover a
-                    color: transparentize($color-accent, .45)
+                    color: transparentize($color-accent, .35)
             @include media-breakpoint-up(md)
                 width: calc(50vw + min(1040px, calc(100vw - 390px)) / 2)
             @include media-breakpoint-up(lg)
@@ -448,6 +448,6 @@ footer#document-footer
                 li a
                     color: white
                 ul:hover a
-                    color: transparentize(white, .45)
+                    color: transparentize(white, .35)
                 li a:hover
                     color: white
